src/objects/Account_Sales__c.object
<CustomObject>
    <fields>
        <fullName>Account_Business_Role_SFID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated  Account Business Role</description>
        <label>Account Business Role</label>
        <referenceTo>Account_Business_Role__c</referenceTo>
        <relationshipLabel>Account_Sales</relationshipLabel>
        <relationshipName>Account_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Identifier_SFID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated Account Identifier</description>
        <label>Account Identifier</label>
        <referenceTo>Account_Identifier__c</referenceTo>
        <relationshipLabel>Account_Sales</relationshipLabel>
        <relationshipName>Account_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_SFID__c</fullName>
        <description>Associated Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account_Sales</relationshipLabel>
        <relationshipName>Account_Sales</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <label>Brand Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Descr__c</fullName>
        <description>This field is to describe the brand family.</description>
        <inlineHelpText>This field is to describe the brand family.</inlineHelpText>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Channel</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>BioAg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Crop__c</fullName>
        <label>Crop</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corn</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Soy</fullName>
                </value>
                <value>
                    <fullName>Cotton</fullName>
                </value>
                <value>
                    <fullName>Alfalfa</fullName>
                </value>
                <value>
                    <fullName>Barley</fullName>
                </value>
                <value>
                    <fullName>Canola/Oilseed Rape</fullName>
                </value>
                <value>
                    <fullName>CORN AND COTTON</fullName>
                </value>
                <value>
                    <fullName>Grass/Turf/Lawn</fullName>
                </value>
                <value>
                    <fullName>Lupines</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous Seed</fullName>
                </value>
                <value>
                    <fullName>Oats</fullName>
                </value>
                <value>
                    <fullName>Potato</fullName>
                </value>
                <value>
                    <fullName>R&amp;D Services</fullName>
                </value>
                <value>
                    <fullName>Rice</fullName>
                </value>
                <value>
                    <fullName>Rye</fullName>
                </value>
                <value>
                    <fullName>Seed Other</fullName>
                </value>
                <value>
                    <fullName>Sorghum</fullName>
                </value>
                <value>
                    <fullName>Sudan/Sudax</fullName>
                </value>
                <value>
                    <fullName>Sugarbeet</fullName>
                </value>
                <value>
                    <fullName>Sugarcane</fullName>
                </value>
                <value>
                    <fullName>Sunflower</fullName>
                </value>
                <value>
                    <fullName>Triticale</fullName>
                </value>
                <value>
                    <fullName>Wheat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HC_Integration_Key__c</fullName>
        <description>This field is for the temporary storage of an external id for the Heroku Connect Integration. It will be used as necessary for parent-child relationships. Further integrations will be via the Salesforce Record ID.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field is for the temporary storage of an external id for the Heroku Connect Integration. It will be used as necessary for parent-child relationships. Further integrations will be via the Salesforce Record ID.</inlineHelpText>
        <label>Heroku Connect Integration Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Net_Sales_Qty__c</fullName>
        <label>Net Sales Qty</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Opportunity for that particular crop for a particular year</description>
        <label>Opportunity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Qty__c</fullName>
        <label>Order Qty</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selling_Season_Descr__c</fullName>
        <description>Selling season for the Crop</description>
        <label>Selling Season</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2015 - Safra</fullName>
                </value>
                <value>
                    <fullName>2015 Safra</fullName>
                </value>
                <value>
                    <fullName>2016 - Safra</fullName>
                </value>
                <value>
                    <fullName>2016 Safra</fullName>
                </value>
                <value>
                    <fullName>2017 - Safra</fullName>
                </value>
                <value>
                    <fullName>2017 Safra</fullName>
                </value>
                <value>
                    <fullName>SUMMER</fullName>
                </value>
                <value>
                    <fullName>WINTER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Of_Measure__c</fullName>
        <label>Unit Of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dollars</fullName>
                </value>
                <value>
                    <fullName>Units</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year_Type__c</fullName>
        <label>Year Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fiscal Year</fullName>
                </value>
                <value>
                    <fullName>Calendar Year</fullName>
                </value>
                <value>
                    <fullName>Crop Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Account Sales</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account Sales Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Sales</pluralLabel>
    <recordTypes>
        <fullName>Customer_Sales</fullName>
        <active>true</active>
        <description>This record type is to store Customer net sales</description>
        <label>Customer Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dealer_Sales</fullName>
        <active>true</active>
        <description>This record type is to store the dealer net sales</description>
        <label>Dealer Sales</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>